# Advanced-calculator

./: .dockerignore  .gitignore  CMakeLists.txt  Characters.cpp  CharactersTests.cpp  README.md  main.cpp
.github/: CD.yml
.github/workflows/: CD.yml  CI.yml  CI_windows.yml  deploy_on_server.yml
app/: CMakeLists.txt  main.cpp
dockerfiles/: clang.Dockerfile  gcc_app.Dockerfile
lib/: CMakeLists.txt  Characters.cpp  Characters.h
tests/: 01-input.txt  01-output.txt  CMakeLists.txt  CharactersTests.cpp
